<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pag3_varsta">


    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/today"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/dobText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateText"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/date_of_birth"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <TextView
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dobText"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/age"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dobText" />

    <Button
        android:id="@+id/dobBTN"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/ageText"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:backgroundTint="#3db39e"
        android:padding="5dp"
        android:text="@string/enter_your_birthday"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageText"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/calcbtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/dobBTN"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:backgroundTint="#3db39e"
        android:padding="5dp"
        android:text="@string/calculate_age"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dobBTN"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>